fix(qick-cart): width alignment issue fix

--- a/includes/modules/fly-cart/assets/css/wfc-style.css
+++ b/includes/modules/fly-cart/assets/css/wfc-style.css
@@ -212,11 +212,12 @@
 }
 
 .sgsb-fly-cart-table td.product-name {
+    width: 44%;
     padding-right: 0%;
     display: flex;
     align-items: center;
     background: transparent !important;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .sgsb-fly-cart-table td.product-subtotal {
@@ -316,13 +317,13 @@
 }
 
 .sgsb-fly-cart-table .product-name .product-quantity .quantity {
-    width: 3.5em !important;
+    width: 2.5em !important;
     margin: 0;
     position: relative;
     float: none !important;
     overflow: visible !important;
     zoom: 1;
-    min-width: 3.5em !important;
+    min-width: 2.5em !important;
     border: none;
 }
 
@@ -598,6 +599,7 @@
     color: rgb(52, 95, 111);
     border: none;
     background: none;
+    text-align: left;
 }
 
 .cart-collaterals .woocommerce-Price-amount {
@@ -701,7 +703,7 @@ iframe.sgsb-fast-cart-checkout-frame {
     }
 
     .wfc-widget-sidebar .sgsb-widget-shopping-cart-content-wrapper {
-        width: 470px;
+        width: 480px;
     }
 
     .wfc-widget-sidebar.sgsb-quick-cart-center-layout .sgsb-widget-shopping-cart-content-wrapper {
